@@ -3,7 +3,10 @@
   (credits to Jeremy Chadwick for finding the relevant code)
 - Fixed typos in mod_suphp.c (Apache 1.3)
   (credits to Johan Ekenberg for finding these typos)
-
+- Fixed potential buffer overflow in function suphp_bucket_read() in
+  src/apache2/mod_suphp.c
+- Fix problems with scripts sending "Last-Modified" headers
+	
 * Version 0.6.0 (27 May 2005)
 ++ The development of this version was sponsored by Techno-vi - Wanix. ++
 ++ Thanks to the sponsor!                                              ++
